# zero2prod

./: .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  RUST_SOFTWARE_INSIGHTS.md  blah  spec.yaml
.github/workflows/: general.yml
.sqlx/: query-6dbcc5daefe4b0f7a5240bd39d189dde3a9564709aba1c86f31cec7ae73af24d.json
configuration/: base.yaml  production.yaml
http/: api.http  http-client.env.json  subscriptions.http
migrations/: 20240816151041_add_status_to_subscriptions.sql  20240820151943_make_status_not_null_in_subscriptions.sql
scripts/: init_db.sh  initdb.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  routes.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: helpers.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
