[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries! # If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.8"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
claims = "0.7"
config = { git = "https://github.com/mehcode/config-rs", rev = "e3c1d0b" }
fake = "~2.3"
once_cell = "1.19"
quickcheck = "0.9"
quickcheck_macros = "0.9"
secrecy = { version = "0.8", features = ["serde"] }
# We need the optional `derive` feature to use `serde`'s procedural macros:
# `#[derive(Serialize)]` and `#[derive(Deserialize)]`.
# The feature is not enabled by default to avoid pulling in
# unnecessary dependencies for projects that do not need it.
serde = { version = "1.0", features = ["derive"] }
serde-aux = "4.5"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.7"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
unicode-segmentation = "1"
uuid = { version = "1.10", features = ["v4"] }
validator = { version = "0.16" }
wiremock = "0.6"

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json"]
# We need the `json` feature flag to serialize/deserialize JSON payloads features = ["json", "rustls-tls"]

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = ">=0.8"
default-features = false
features = [
    "runtime-tokio-rustls", "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
serde_json = "1"
